--- a/BookerPortal.Web/Components/Routes.razor
+++ b/BookerPortal.Web/Components/Routes.razor
@@ -1,6 +1,21 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+﻿@using BookerPortal.Web.Components.Pages
+@using BookerPortal.Web.Components.Pages.MovieTheatrePages
+@using Microsoft.AspNetCore.Components.Authorization
+
+<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+            <NotAuthorized>
+                <RedirectToLoginPage />
+            </NotAuthorized>
+            <Authorizing>
+            </Authorizing>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <PageTitle>The page not found</PageTitle>
+        <LayoutView Layout="@typeof(Layout.MainLayout)">
+        </LayoutView>
+    </NotFound>
 </Router>
