Authentication and Authprization working

--- a/BookerPortal.Web/Components/Pages/Account/Login.razor
+++ b/BookerPortal.Web/Components/Pages/Account/Login.razor
@@ -17,11 +17,11 @@
             </div>
             <div class="mb-3">
                 <label>Email</label>
-                <InputText @bind-Value="Model.Password" class="form-control" placeholder="Email" />
+                <InputText @bind-Value="Model.Email" class="form-control" placeholder="Email" />
                 <ValidationMessage For="() => Model.Email" />
             </div>
             <div class="mb-3">
-                <label>User Name</label>
+                <label>Password</label>
                 <InputText @bind-Value="Model.Password" placeholder="Password" typeof="password" class="form-control" />
                 <ValidationMessage For="() => Model.Password" />
             </div>
