--- a/BookerPortal.Web/Components/Routes.razor
+++ b/BookerPortal.Web/Components/Routes.razor
@@ -4,18 +4,7 @@
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
-            <NotAuthorized>
-                <RedirectToLoginPage />
-            </NotAuthorized>
-            <Authorizing>
-            </Authorizing>
-        </AuthorizeRouteView>
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
-    <NotFound>
-        <PageTitle>The page not found</PageTitle>
-        <LayoutView Layout="@typeof(Layout.MainLayout)">
-        </LayoutView>
-    </NotFound>
 </Router>
