--- a/BookerPortal.Web/Components/Layout/SideBar.razor
+++ b/BookerPortal.Web/Components/Layout/SideBar.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-<div class="nav-item px-3">
+﻿<div class="nav-item px-3">
     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Booker Portal
     </NavLink>
@@ -10,39 +9,41 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
 
-        <AuthorizeView Roles="AdminRole">
+        <AuthorizeView Roles="Admin,User">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="booking">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Bookings
                     </NavLink>
                 </div>
-
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="movie">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Movies
-                    </NavLink>
-                </div>
-
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="reservation">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Reservations
-                    </NavLink>
-                </div>
-
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="salon">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Salons
+                    <NavLink class="nav-link" href="Show">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Shows
                     </NavLink>
                 </div>
             </Authorized>
-        </AuthorizeView>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Show">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Shows
-            </NavLink>
-        </div>
+        </AuthorizeView>
+       
+        <AuthorizeView Roles="Admin,Manager">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="movie">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Movies
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="reservation">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Reservations
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="salon">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Salons
+                </NavLink>
+            </div>
+        </AuthorizeView>
     </nav>
 </div>
 
