--- a/BookerPortal.Web/Components/_Imports.razor
+++ b/BookerPortal.Web/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BookerPortal.Web
 @using BookerPortal.Web.Components
+@using Microsoft.AspNetCore.Components.Authorization
