Added Authorize roles in component to prevent security loophole

--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
@@ -5,6 +5,7 @@
 @rendermode InteractiveServer
 @inject IBookerService bookerService
 @attribute [StreamRendering]
+@attribute [Authorize(Roles = "Admin,User")]
 <PageTitle>Bokningar</PageTitle>
 
 @if (bookers != null)
