--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Show.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Show.razor
@@ -5,6 +5,7 @@
 @rendermode InteractiveServer
 @inject IShowService showService
 @attribute [StreamRendering]
+@attribute [Authorize(Roles = "Admin,User")]
 <PageTitle>Bokningar</PageTitle>
 
 @if (scheduleDTO != null)
