--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
@@ -5,6 +5,7 @@
 @rendermode InteractiveServer
 @inject IReservationService reservationService
 @attribute [StreamRendering]
+@attribute [Authorize(Roles = "Admin,User")]
 <PageTitle>Bokningar</PageTitle>
 
 @if (reservations != null)
