--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
@@ -5,6 +5,7 @@
 @rendermode InteractiveServer
 @inject ISalonService salonService
 @attribute [StreamRendering]
+@attribute [Authorize(Roles = "Admin,User")]
 <PageTitle>Bokningar</PageTitle>
 
 @if (salon != null)
