--- a/BookerPortal.Web/Components/_Imports.razor
+++ b/BookerPortal.Web/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using BookerPortal.Web
 @using BookerPortal.Web.Components
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
