--- a/BookerPortal.Web/Components/Pages/Account/Login.razor
+++ b/BookerPortal.Web/Components/Pages/Account/Login.razor
@@ -12,7 +12,7 @@
     <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
         <EditForm Model="@Model" OnValidSubmit="Authenticate" FormName="LoginForm">
             <div class="mb-3 text-center flex-column">
-                <img src="" style="max-height:5rem;" />
+                <img src="login.png" style="max-height:15rem;" />
                 <h3>LOGIN</h3>
             </div>
             <div class="mb-3">
