--- a/BookerPortal.Web/Components/Pages/Account/Logout.razor
+++ b/BookerPortal.Web/Components/Pages/Account/Logout.razor
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="card-body flex-column">
                 <div class="text-center">
-                    <img src="/images/logout.png" style="max-height:5rem" />
+                    <img src="logout.png" style="max-height:15rem" />
                 </div>
                 <div class="text-center mt-2">
                     <span class="text-danger fw-bolder">You've successfully logged out of the application.</span>
