--- a/BookerPortal.Web/Components/Layout/MainLayout.razor.css
+++ b/BookerPortal.Web/Components/Layout/MainLayout.razor.css
@@ -9,14 +9,13 @@ main {
 }
 
 .sidebar {
-
-    background-image: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
+    background-color: #ffffff;
+    border-right: 1px solid black; 
 }
 
-
 .top-row {
-    background-color: #000000;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: #ffffff;
+    border-bottom: 1px solid black;
     justify-content: flex-end;
     height: 5rem;
     display: flex;
