--- a/BookerPortal.Web/Components/Pages/Account/Login.razor
+++ b/BookerPortal.Web/Components/Pages/Account/Login.razor
@@ -9,11 +9,10 @@
 @inject NavigationManager navigationManager
 
 <div class="row">
-    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
+    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 black-border">
         <EditForm Model="@Model" OnValidSubmit="Authenticate" FormName="LoginForm">
             <div class="mb-3 text-center flex-column">
                 <img src="login.png" style="max-height:15rem;" />
-                <h3>LOGIN</h3>
             </div>
             <div class="mb-3">
                 <label>Email</label>
@@ -22,14 +21,14 @@
             </div>
             <div class="mb-3">
                 <label>Password</label>
-                <InputText @bind-Value="Model.Password" placeholder="Password" typeof="password" class="form-control" />
+                <InputText @bind-Value="Model.Password" placeholder="Password" type="password" class="form-control" />
                 <ValidationMessage For="() => Model.Password" />
             </div>
             <div class="mb-3 text-center">
                 <span class="text-danger">@errorMessage</span>
             </div>
             <div class="mb-3 d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-dark">Login</button>
             </div>
         </EditForm>
     </div>
