--- a/BookerPortal.Web/Components/Pages/Home.razor
+++ b/BookerPortal.Web/Components/Pages/Home.razor
@@ -15,7 +15,7 @@
                         <span>You are not logged in. Please <a class="fw-bolder" href="/login">Click here</a> to login.</span>
                     </NotAuthorized>
                     <Authorized>
-                        <span>Logged in as <b>@context.User.Identity.Name</b>. <a class="fw-bolder" href="/logout">Click here</a>to logout.</span>
+                        <span>Logged in as <b>@context.User.Identity.Name</b></span>
                     </Authorized>
                 </AuthorizeView>
             </div>
