--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -107,10 +107,14 @@
                     <button type="submit" class="custom-button">Submit Booking</button>
                 </div>
             </EditForm>
+            </div>
+        </div>
+</div>
 
             <div style="text-align: center; display: flex; align-items: center; flex-direction: column;">
                 @if (!string.IsNullOrWhiteSpace(successMessage))
                 {
+                    <BookingConfirmation Booker="@booker" Reservation="@reservation" />
                     <div class="success-message">
                         <span style="display: flex; align-items: center;">
                             @successMessage
@@ -122,7 +126,7 @@
                 }
                 @if (!string.IsNullOrWhiteSpace(errorMessage))
                 {
-                    <BookingReceipt Booker="@booker" Reservation="@reservation" />
+                    
                     <div class="error-message">
                         @errorMessage
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
@@ -131,9 +135,6 @@
                     </div>
                 }
             </div>
-        </div>
-    </div>
-</div>
 
 @code {
     [SupplyParameterFromForm]
