Added style to non authorized page and and basework for coming work

--- a/BookerPortal.Web/Components/Pages/Account/Login.razor
+++ b/BookerPortal.Web/Components/Pages/Account/Login.razor
@@ -79,10 +79,10 @@
             </div>
         </EditForm>
         <div class="text-center">
-            <a href="/forgot-password">Forgot Password?</a>
+            <a href="/forgot-password">I forgot my password</a>
         </div>
         <div class="text-center">
-            <p>Don't have an account? <a href="/register">Register</a></p>
+            <p>Add ur business? <a href="/register">Get started</a></p>
         </div>
     </div>
 </div>
