--- a/BookerPortal.Web/Components/Pages/Account/OnlineHome.razor
+++ b/BookerPortal.Web/Components/Pages/Account/OnlineHome.razor
@@ -1,12 +1,44 @@
-﻿<h2 class="fw-bolder"> Welcome to <span class="text-decoration-underline">Booking app!</span></h2>
+﻿<style>
+    .container-outline {
+        border: 2px solid black;
+        padding: 10px;
+    }
 
-<div class="row">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Random Card</h5>
-                <p class="card-text">LoremIpsumText</p>
+    .card {
+        border: 2px solid black;
+        padding: 10px;
+    }
+</style>
+
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Upcoming Shows</h5>
+                    <p class="card-text">Get ready for the excitement! Check out our upcoming shows and mark your calendars for the entertainment extravaganza.</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Recently Added Movies</h5>
+                    <p class="card-text">Catch the latest blockbusters! Explore our collection of recently added movies and dive into the world of cinema.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Amount of Bookers This Month</h5>
+                    <p class="card-text">Track the success of your events! See the number of bookers for this month and plan your next moves accordingly.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
