--- a/BookerPortal.Web/Components/Layout/MainLayout.razor
+++ b/BookerPortal.Web/Components/Layout/MainLayout.razor
@@ -9,12 +9,7 @@
         <div class="top-row px-4">
             <AuthorizeView>
                 <NotAuthorized>
-                    <a href="/login" class="login-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z" />
-                            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
-                        </svg>
-                    </a>
+                    <img src="https://i.imgur.com/9HfQUDE.png" alt="Logo" class="logo" width="150" height="100">
                 </NotAuthorized>
                 <Authorized>
                     <a href="/Profile" target="_blank" class="about-link">
