--- a/BookerPortal.Web/Components/Layout/MainLayout.razor.css
+++ b/BookerPortal.Web/Components/Layout/MainLayout.razor.css
@@ -16,10 +16,15 @@ main {
 .top-row {
     background-color: #ffffff;
     border-bottom: 1px solid black;
-    justify-content: flex-end;
     height: 5rem;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    align-items: center; 
+}
+
+.logo {
+    width: 250px; 
+    height: auto; 
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
