--- a/BookerPortal.Web/Components/Layout/SideBar.razor
+++ b/BookerPortal.Web/Components/Layout/SideBar.razor
@@ -1,6 +1,6 @@
 ﻿<div class="nav-item px-3">
     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Booker Portal
+        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Booker
     </NavLink>
 </div>
 
