--- a/BookerPortal.Web/Components/Pages/Home.razor
+++ b/BookerPortal.Web/Components/Pages/Home.razor
@@ -14,6 +14,7 @@
                         <OfflineHome></OfflineHome>
                     </NotAuthorized>
                     <Authorized>
+                        <OnlineHome></OnlineHome>
                         <span>Logged in as <b>@context.User.FindFirst(ClaimTypes.Email)?.Value</b></span>
                     </Authorized>
                 </AuthorizeView>
