--- a/BookerPortal.Web/Components/Pages/Account/RegisterUser.razor
+++ b/BookerPortal.Web/Components/Pages/Account/RegisterUser.razor
@@ -1,8 +1,9 @@
-﻿@page "/registercompany"
-@using BookerPortal.Web.ViewModels
-@using Request.HTTP.DTO.MovieTheatreDTO
+﻿@page "/registeruser"
+@using Booking.Api.Entities.DTO
 @using Request.HTTP.RequestService.IRequestService
-@inject ICompanyService companyService
+@using BookerPortal.Web.ViewModels
+@using System.Text.RegularExpressions
+@inject IUserService userService
 @inject NavigationManager navigationManager
 
 <style>
@@ -59,9 +60,14 @@
         </div>
         <EditForm Model="@Model" FormName="RegisterForm" OnSubmit="SubmitForm">
             <div class="mb-3">
-                <label>CompanyName</label>
-                <InputText @bind-Value="Model.CompanyName" placeholder="Company Name" class="form-control" />
-                <ValidationMessage For="() => Model.CompanyName" />
+                <label>Name</label>
+                <InputText @bind-Value="Model.Name" class="form-control" placeholder="Name" />
+                <ValidationMessage For="() => Model.Name" />
+            </div>
+            <div class="mb-3">
+                <label>Surname</label>
+                <InputText @bind-Value="Model.LastName" class="form-control" placeholder="Surname" />
+                <ValidationMessage For="() => Model.LastName" />
             </div>
             <div class="mb-3">
                 <label>Email</label>
@@ -69,14 +75,19 @@
                 <ValidationMessage For="() => Model.Email" />
             </div>
             <div class="mb-3">
-                <label>Adress</label>
-                <InputText @bind-Value="Model.Adress" class="form-control" placeholder="Adress" />
-                <ValidationMessage For="() => Model.Adress" />
+                <label>Password</label>
+                <InputText @bind-Value="Model.Password" class="form-control" placeholder="Password" />
+                <ValidationMessage For="() => Model.Password" />
             </div>
             <div class="mb-3">
-                <label>Country</label>
-                <InputText @bind-Value="Model.Country" class="form-control" placeholder="Country" />
-                <ValidationMessage For="() => Model.Country" />
+                <label>Company</label>
+                <InputNumber @bind-Value="Model.CompanyId" class="form-control" placeholder="CompanyId" />
+                <ValidationMessage For="() => Model.CompanyId" />
+            </div>
+            <div class="mb-3">
+                <label>Role</label>
+                <InputText @bind-Value="Model.Role" class="form-control" placeholder="Role: Admin, Manager, User" />
+                <ValidationMessage For="() => Model.Role" />
             </div>
             <div class="mb-3 text-center">
                 <span class="text-danger">@errorMessage</span>
@@ -90,21 +101,30 @@
 
 @code {
     [SupplyParameterFromForm]
-    public CompanyViewModel Model { get; set; } = new();
+    public UserViewModel Model { get; set; } = new();
 
     private string? errorMessage;
 
     private async Task SubmitForm()
     {
-        CompanyDTO companyDTO = new CompanyDTO
-            {
-                CompanyName = Model.CompanyName,
+        UserDTO userDTO = new UserDTO
+        {
+                Name = Model.Name,
+                LastName = Model.LastName,
                 Email = Model.Email,
-                Adress = Model.Adress,
-                Country = Model.Country
-            };
+                Password = Model.Password,
+                CompanyId = Model.CompanyId,
+                Role = Model.Role
+        };
 
-        var respone = await companyService.PostCompany(companyDTO);
+        string rolePattern = "^(admin|manager|user)$";
+        if (!Regex.IsMatch(Model.Role, rolePattern, RegexOptions.IgnoreCase))
+        {
+            errorMessage = "Invalid role. Please enter Admin, Manager, or User.";
+            return;
+        }
+
+        var respone = await userService.PostUser(userDTO);
 
         if (respone.IsSuccessStatusCode)
         {
@@ -112,8 +132,7 @@
         }
         else
         {
-            errorMessage = "Failed to register company.";
+            errorMessage = "Failed to register the user.";
         }
-
     }
 }
